# lan-video

./: .gitignore  LAN_DEPLOYMENT.md  README.md  build.gradle.kts  docker-compose.yml  settings.gradle.kts  start.sh
.github/workflows/: ci.yml  docker.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/color/: nav_color_selector.xml
app/src/main/res/drawable/: bg_avatar_glow.xml  bg_bottom_nav.xml  bg_button_neon_gradient.xml  bg_card_glass.xml  bg_card_glass_input.xml  (+20 more)
backend/: .env.example  Cargo.toml  Dockerfile  run_backend.command
backend/migrations/: 001_create_users.sql  002_create_auth_tokens.sql  003_create_videos.sql  004_create_playback_history.sql  005_add_indexes.sql  006_add_foreign_keys.sql  007_add_thumb_url.sql
backend/src/: config.rs  db.rs  lib.rs  main.rs
backend/src/handlers/: admin.rs  auth.rs  mod.rs  playback.rs  server.rs  videos.rs
backend/src/middleware/: auth.rs
backend/src/models/: auth.rs  mod.rs  playback.rs  video.rs
backend/src/repositories/: mod.rs  user_repo.rs  video_repo.rs
backend/src/services/: mod.rs  video_service.rs
backend/src/util/: password.rs  response.rs
backend/tests/: test_password.rs
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
webapp/: index.html  manifest.json  sw.js
webapp/css/: style.css
webapp/js/: access-gate.js  api.js  config.js  connection.js  dom.js  drawer.js  home.js  icons.js  image-viewer.js  keyboard.js  main.js  navigation.js  player.js  search.js  settings.js  slideshow.js  state.js  upload.js  utils.js
(+58 files in other folders)
