[package]
name = "lan-video-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "limit", "set-header", "timeout"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
argon2 = "0.5"
rand = "0.9"
md-5 = "0.10"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
moka = { version = "0.12", features = ["sync"] }
